# file-scraper

./: Cargo.toml  Containerfile  README.md
.github/workflows/: build-container-image.yml  release.yml
.sqlx/: query-0705e761577ff49781553b173ecfd34a8644eb75dff267e737312b35fc466aa2.json  query-41d8a3b7c633409a1fdffed00b134f3f86eb4786b945b9e536adc99b8d455608.json  query-68a611b7ea9d4ba4f68be481517ff94b00f9bf377ef9e07bb4c35e944edebb7d.json  query-7e447886ba5af79490a8edcb7fdb6b043daa1da7a168e0614d6a158ae17ab3dd.json  query-85ea83b764b283e6aa23bb7d990ff4e190aa25999bfe701f9c9e3eb96f395151.json  query-9f7ef491200ea1f1e568d6ce29cc43a3ebeb3f2ee92f3f98ff70a0d671fe2c6a.json  query-ca86496463def67562874d57d6b74eb98c412556c1707210b5dd28d76ce86649.json  query-f74d3507fabf2aa80cc014432ced20accf7053fafd2d82b37734aeaa0260ea5e.json
src/: db.rs  fs.rs  main.rs  s3.rs  worker.rs
