[package]
name = "file-scraper"
version = "0.1.0"
edition = "2024"
repository = "https://github.com/ibotty/file-scraper"

[dependencies]
anyhow = "1.0.86"
async-trait = "0.1.80"
async-walkdir = "2.0.0"
aws-config = { version = "1.5.4", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1.31.0"
aws-smithy-types = "1.2.0"
clap = { version = "4.5.4", features = ["derive"] }
clap-verbosity = "2.1.0"
futures-util = "0.3.30"
gethostname = "1"
itertools = "0.14.0"
mime_guess = "2.0.4"
regex-lite = "0.1.5"
sqlx = { version = "0.8", default-features = false, features = ["macros", "postgres", "runtime-tokio", "time", "tls-rustls"] }
tokio = { version = "1.37.0", features = ["fs", "rt", "macros", "rt-multi-thread", "signal"] }
tokio-stream = "0.1.15"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.14.1"
# CI backends to support
ci = "github"
# The installers to generate for each app
installers = []
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["x86_64-unknown-linux-gnu"]
# Publish jobs to run in CI
pr-run-mode = "plan"
allow-dirty = ["ci"]
