[package]
name = "file-scraper"
version = "0.3.4"
edition = "2024"
repository = "https://github.com/ibotty/file-scraper"

[dependencies]
anyhow = "1.0.86"
async-trait = "0.1.80"
async-walkdir = "2.0.0"
aws-config = { version = "1.5.4", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1.31.0"
aws-smithy-types = "1.2.0"
clap = { version = "4.5.4", features = ["derive"] }
clap-verbosity = "2.1.0"
futures-util = "0.3.30"
gethostname = "1"
itertools = "0.14.0"
mime_guess = "2.0.4"
regex-lite = "0.1.5"
sqlx = { version = "0.8", default-features = false, features = ["macros", "postgres", "runtime-tokio", "time", "tls-rustls"] }
tokio = { version = "1.37.0", features = ["fs", "rt", "macros", "rt-multi-thread", "signal"] }
tokio-stream = "0.1.15"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

# The profile that 'cargo dist' will build with
[profile.release]
lto = "fat"
opt-level = 3
codegen-units = 1
strip = "symbols"
